# psychic-octo-chainsaw

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
backend/: .env-example  Cargo.toml  Dockerfile
backend/migrations/2023-04-20-215929_create_users/: up.sql
backend/migrations/2023-04-28-182838_create_sessions/: up.sql
backend/src/: api.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs
