[package]
name = "psychic_octo_chainsaw"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
diesel = { version = "2.0.4", features = ["postgres"] }
uuid = { version = "1.3.2", features = [
    "v4", 
    "fast-rng",
    "macro-diagnostics"
] }
